--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: idlebook
 subtitle: 但行好事，莫问前程
-welcome_message: <a href="http://idlevbook.com" target="_blank">欢迎您的访问。</a>
+welcome_message: <a href="http://idlevbook.com" target="_blank">欢迎您的访问</a>
 description: 嗨，我是添书，一名 iOS 开发者,目前暂居深圳。
 creator: <a href="http://idlevbook.com">@idlebook</a>
 
