--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ cover_color: red
 
 # The blog button should not be removed.
 blog_button:
-    title: Blog
+    title: 博客
     description: Visit blog
 
 # Navigation buttons in the front page.
@@ -27,7 +27,7 @@ nav:
 
 # Pagination
 plugins: [jekyll-paginate]
-paginate: 10
+paginate: 7
 paginate_path: "page/:num/"
 
 # Comment
