--- a/_config.yml
+++ b/_config.yml
@@ -205,4 +205,4 @@ jekyll-archives:
     tag: /tags/:name/
     category: /categories/:name/
 
-theme: jekyll-theme-merlot
+theme: jekyll-theme-cayman
