--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ defaults:
       toc: true         # Display TOC column in posts.
       breadcrumb:
         -
-          label: Posts
+          label: 主页
           url: /
   -
     scope:
@@ -146,7 +146,7 @@ defaults:
     values:
       breadcrumb:
         -
-          label: 首页
+          label: 主页
           url: /
         -
           label: 标签
@@ -157,10 +157,10 @@ defaults:
     values:
       breadcrumb:
         -
-          label: Home
+          label: 主页
           url: /
         -
-          label: Categories
+          label: 分类
           url: /tabs/categories/
   -
     scope:
@@ -171,7 +171,7 @@ defaults:
       dynamic_title: true    # Hide title in mobile screens.
       breadcrumb:
         -
-          label: Home
+          label: 主页
           url: /
 
 sass:
