--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title: idlebook                        # the main title
 
 tagline: 但行好事,莫问前程   # it will display as the sub-title
 
