--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >-                        # used by seo meta and the atom feed
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://idlebook.github.io'
 
-author: your_full_name                  # change to your full name
+author: idlebook                  # change to your full name
 
 github:
   username: github_username             # change to your github username
