--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,7 @@ title: idlebook                        # the main title
 
 tagline: 但行好事,莫问前程   # it will display as the sub-title
 
-description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+description: 嗨，我是添书，一名 iOS 开发者,目前暂居深圳。
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://idlebook.github.io'
@@ -28,7 +25,7 @@ twitter:
   username: twitter_username            # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
+  name: idlebook               # it will shows as the copyright owner in Footer
   email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
@@ -87,7 +84,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
+avatar: /media/avatar.jpg
 
 # boolean type, the global switch for ToC in posts.
 toc: true
